// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[LoadingIndicator] render renders with !size with none string imgSource 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Image
    source={10}
    style={{}}
  />
</View>
`;

exports[`[LoadingIndicator] render renders with !size with string imgSource 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Image
    source={
      {
        "uri": "test",
      }
    }
    style={{}}
  />
</View>
`;

exports[`[LoadingIndicator] render renders with [imgSource] 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Image
    source={
      {
        "uri": "http",
      }
    }
    style={
      {
        "height": 80,
        "width": 80,
      }
    }
  />
</View>
`;

exports[`[LoadingIndicator] render renders with size=small 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Image
    source={
      {
        "uri": "http",
      }
    }
    style={
      {
        "height": 50,
        "width": 50,
      }
    }
  />
</View>
`;

exports[`[LoadingIndicator] render renders with size=test 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Image
    source={10}
    style={
      {
        "height": "test",
        "width": "test",
      }
    }
  />
</View>
`;

exports[`[LoadingIndicator] render renders with size=undefined 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Image
    source={
      {
        "uri": "http",
      }
    }
    style={
      {
        "height": 80,
        "width": 80,
      }
    }
  />
</View>
`;

exports[`[LoadingIndicator] render should render [customElement] 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <View />
</View>
`;

exports[`[LoadingIndicator] render should render with !size with none string imgSource 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Image
    source={10}
    style={{}}
  />
</View>
`;

exports[`[LoadingIndicator] render should render with [imgSource] 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Image
    source={
      {
        "uri": "http",
      }
    }
    style={
      {
        "height": 80,
        "width": 80,
      }
    }
  />
</View>
`;

exports[`[LoadingIndicator] render should render with size=small 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Image
    source={
      {
        "uri": "http",
      }
    }
    style={
      {
        "height": 50,
        "width": 50,
      }
    }
  />
</View>
`;

exports[`[LoadingIndicator] render should render with size=test 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Image
    source={10}
    style={
      {
        "height": "test",
        "width": "test",
      }
    }
  />
</View>
`;

exports[`[LoadingIndicator] render should render with size=undefined 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Image
    source={
      {
        "uri": "http",
      }
    }
    style={
      {
        "height": 80,
        "width": 80,
      }
    }
  />
</View>
`;

exports[`[LoadingIndicator] render should render without crashing 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "flex": 1,
      "flexDirection": "row",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <ActivityIndicator
    color="#9E45B3"
    size="large"
  />
</View>
`;
